ajout de la section projets

--- a/index.html
+++ b/index.html
@@ -43,7 +43,15 @@
             <img src="images/saut.jpg">
         </div>
     </section>
-    <section class="sub-section"></section>
+    <section class="alternative-sub-section">
+        <h2>Projects</h2>
+        <div class="project-container">
+            <div class="project-card"></div>
+            <div class="project-card"></div>
+            <div class="project-card"></div>
+            <div class="project-card"></div>
+        </div>
+    </section>
     <footer></footer>
     <script scr="app.js"></script>
 </body>
