ajout de l'interieur des cartes projet

--- a/index.html
+++ b/index.html
@@ -46,9 +46,27 @@
     <section class="alternative-sub-section">
         <h2>Projects</h2>
         <div class="project-container">
-            <div class="project-card"></div>
-            <div class="project-card"></div>
-            <div class="project-card"></div>
+            <div class="project-card">
+                <img class="project-image" alt="project 1 image" src="images/airbnb.PNG">
+                <h3>airbnb clone</h3>
+                <p>Un projet Front-End très intéressant afin de créer un clone airbnb. Ce site m'a permis d'utiliser React.</p>
+                <br>
+                <a href="airbnb.com">voir le projet</a>
+            </div>
+            <div class="project-card">
+                <img class="project-image" alt="project 1 image" src="images/airbnb.PNG">
+                <h3>airbnb clone</h3>
+                <p>Un projet Front-End très intéressant afin de créer un clone airbnb. Ce site m'a permis d'utiliser React.</p>
+                <br>
+                <a href="airbnb.com">voir le projet</a>
+            </div>
+            <div class="project-card">
+                <img class="project-image" alt="project 1 image" src="images/airbnb.PNG">
+                <h3>airbnb clone</h3>
+                <p>Un projet Front-End très intéressant afin de créer un clone airbnb. Ce site m'a permis d'utiliser React.</p>
+                <br>
+                <a href="airbnb.com">voir le projet</a>
+            </div>
             <div class="project-card"></div>
         </div>
     </section>
